# coconet

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pybind_build.bat  setup.py
contrib/: CMakeLists.txt
examples/: CMakeLists.txt
examples/pybind/: main.py
examples/tensor/: CMakeLists.txt  main.cpp
examples/variable/: CMakeLists.txt  main.cpp
include/coconet/autograd/: executor.h  function.h  variable.h
include/coconet/core/: allocator.h  context.h  platform.h  tensor.h  type.h
include/coconet/cotensor/: allocator.h  apply.h  blas.h  math.h  storage.h  tensor.h  view.h
include/coconet/cppbind/: coconet.h
include/coconet/nn/: function.h  operation.h  variable.h
include/coconet/pybind/: coconet.h
include/coconet/runtime/: singleton.h
include/coconet/tensor/: allocator.h  index.h  storage.h  tensor.h
include/coconet/tensor/cotensor/: index.h  tensor.h
include/coconet/util/: AlignOf.h  SmallVector.h
source/: CMakeLists.txt
source/autograd/: CMakeLists.txt  executor.cpp  variable.cpp
source/core/: CMakeLists.txt  context.cpp
source/cotensor/: CMakeLists.txt  allocator.cpp  apply.cpp  blas.cpp  math.cpp  storage.cpp  tensor.cpp
source/cppbind/: CMakeLists.txt
source/cutensor/: CMakeLists.txt
source/nn/: CMakeLists.txt  variable.cpp
source/pybind/: CMakeLists.txt  coconet.cpp
source/tensor/: CMakeLists.txt  storage.cpp
source/tensor/cotensor/: CMakeLists.txt
source/tensor/cutensor/: CMakeLists.txt
source/util/: CMakeLists.txt  SmallVector.cpp
tests/: CMakeLists.txt  main.cpp
